Fixed footer position and width on smaller resolutions

--- a/css/index.css
+++ b/css/index.css
@@ -404,7 +404,7 @@ footer {
     background: #eee;
     padding: 5px;
     bottom: 0;
-    position: absolute;
+    position: fixed;
     width: 100%;
     text-align: center;
 }
